--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <title>Arage</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/geral.css">
+    <link rel="stylesheet" href="css/homeResponsivo.css">
 </head>
 <body>
     <header class="header_superior">
-        <div class="Logo"><h1>ARAGE</h1><!---<img src="" alt=""> ---></div>
+        <div class="Logo"><strong><a href="index.html" target="_blank">ARAGE</a></strong>  <!---<img src="" alt=""> ---></div>
+        <nav>
+            
+        </nav>
         <nav> 
-            <a href=""><strong> Home </strong></a>
+            <a href=""><strong>Home </strong></a>
             <a href=""><strong>Albuns</strong></a>
             <a href=""><strong>Musicas</strong></a>
             <a href=""><strong>Login</strong></a>
         </nav>
+        
     </header>
     <main>
         <section class="container">
-                <h1 id="ContainerTexto">Faça seus <br>comentário</h1>
+                <h1 id="ContainerTexto">Faça seus comentários</h1>
                 <div class="links_container">
                     <a href="" id="Comentar"><strong>Comentar</strong></a>
                     <a href="" target="_blank" id="Login"><strong>Fazer Login</strong></a>
