--- a/index.html
+++ b/index.html
@@ -23,19 +23,49 @@
         
     </header>
     <main>
-        <section class="container">
-                <h1 id="ContainerTexto">Faça seus comentários</h1>
-                <div class="links_container">
-                    <a href="" id="Comentar"><strong>Comentar</strong></a>
-                    <a href="" target="_blank" id="Login"><strong>Fazer Login</strong></a>
-                </div>
+        <section class="home">
+            <section class="container">
+                    <h1 id="ContainerTexto">Faça seus comentários</h1>
+                    <div class="links_container">
+                        <a href="" id="Comentar"><strong>Comentar</strong></a>
+                        <a href="" target="_blank" id="Login"><strong>Fazer Login</strong></a>
+                    </div>
+                </section>
+            <section class="container_img">
+                <img src="img/arage_sem_fundo.png" alt="">
             </section>
-        <section class="container_img">
-            <img src="img/arage_sem_fundo.png" alt="">
+        </section>
+        <br><br><br><br>
+        <section class="Artistas"></section>
+            <div class="Titulo">
+                <h1><strong>Artista da Semana</strong></h1>
+            </div>
+            <div class="img_cantores">
+                <div>
+                    <img src="img/artistas/the_weeknd.jfif" alt="the_weeknd">
+                        <h2><strong>THE WEEKND</strong></h2>
+                        <h3>popular</h3>
+                </div>
+
+                <div>
+                    <img src="img/artistas/drake.jfif" alt="drake">
+                    <h2><strong>DRAKE</strong></h2>
+                    <h3>one dance</h3>
+                </div>
+
+                <div>
+                    <img src="img/artistas/justin.jfif" alt="justin_bieber">
+                    <h2><strong>JUSTIN BIEBER</strong></h2>
+                    <h3>stray</h3>
+                </div>
+            </div>
+            <div class="button_action">
+                <button id="btn_confira"><a href="/"><strong>CONFIRA</strong></a></button>
+            </div>
         </section>
     </main>
     <br><br><br><br>
-    <footer>
+    <!-- <footer>
         <div class="Contatos">
             <h1>Nossas Redes Socias</h1>
             <ul id="lista_contatos">
@@ -44,6 +74,6 @@
                 <li><img src="img/icones/messagerFfeito.png" alt="">Messager</li>
             </ul>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
