--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HOME</title>
     <link rel="stylesheet" href="src/home/css/body/body.css">
     <link rel="stylesheet" href="src/StyleGeral/style.css">
+
     <link rel="stylesheet" href="src/home/css/header/header.css">
     <link rel="stylesheet" href="src/home/css/homePageResponsive.css">
 
@@ -74,7 +75,7 @@
                 </div>
             </article>
             <article class="inicio-lateral-direita">
-                    <img src="src/component-img/img-logos/arage_logo_semfundo.png" alt="ARAGE" id="logo-arage">
+                    <img src="src/component-img/img-logos/arage_sem_fundo.png" alt="ARAGE" id="logo-arage">
             </article>
         </section>
         <section class="artistas-semana">
@@ -82,31 +83,32 @@
                 <h1><strong>Artista da Semana</strong></h1>
             </div>
             <section class="img-content">
-                <article class="container-img">
+                <article class="container-img" id="artista1">
                     <div class="img-artista">
-                        <img src="src/home/components/img-cantores/the_weeknd.jfif" alt="The weeknd" class="img-week">
-                    </div>
-                    <div class="description-artista">
-                        <h2><strong>THE WEEKND</strong></h2>
-                        <p>popular</p>
+                        <img src="src/home/components/img-cantores/the_weeknd.jfif" alt="The weeknd" class="img-week" id="pessoa1">
+                        
+                        <div class="description-artista">
+                            <h2><strong>THE WEEKND</strong></h2>
+                            <p>popular</p>
+                        </div>
                     </div>
                 </article>
-                <article class="container-img">
+                <article class="container-img" id="artista2">
                     <div class="img-artista">
-                        <img src="src/home/components/img-cantores/drake.jfif" alt="Drake" class="img-week">
-                    </div>
-                    <div class="description-artista">
-                        <h2><strong>Drake</strong></h2>
-                        <p>one dance</p>
+                        <img src="src/home/components/img-cantores/drake.jfif" alt="Drake" class="img-week" id="pessoa2">
+                        <div class="description-artista">
+                            <h2><strong>DRAKE</strong></h2>
+                            <p>one dance</p>
+                        </div>
                     </div>
                 </article>
-                <article class="container-img">
+                <article class="container-img" id="artista3">
                     <div class="img-artista">
-                        <img src="src/home/components/img-cantores/justin.jfif" alt="Justin" class="img-week">
-                    </div>
-                    <div class="description-artista">
-                        <h2><strong>Justin Bieber</strong></h2>
-                        <p>stray</p>
+                        <img src="src/home/components/img-cantores/justin.jfif" alt="Justin" class="img-week" id="pessoa3">
+                        <div class="description-artista">
+                            <h2><strong>JUSTIN BIEBER</strong></h2>
+                            <p>stray</p>
+                        </div>
                     </div>
                 </article>
         </section>
@@ -200,9 +202,9 @@
                     <button class="btn-home"><a href="/"><strong>Cadastre-se</strong></a></button>
                 </div>
             </article>
-            <article class="buy-arage-pro-esquerda">
+            <!-- <article class="buy-arage-pro-esquerda">
                 <img src="src/component-img/img-logos/arage-pro-2.jpg" alt="">
-            </article>
+            </article> -->
         </section>
     </main>
     <!-- <footer>
