--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="stylesheet" href="src/home/css/artista-semana/ArtistasSemana.css">
     <link rel="stylesheet" href="src/home/css/artista-semana/ArtistaSemanaResponsivo.css">
 
-    <link rel="stylesheet" href="src/home/css/artistasNew.css">
+    <link rel="stylesheet" href="src/home/css/ArtistasNew/artistasNew.css">
+    <link rel="stylesheet" href="src/home/css/ArtistasNew/artistasNewResponsivo.css">
     <link rel="stylesheet" href="src/home/css/present-arage-pro.css">
     <link rel="stylesheet" href="src/home/css/buy-arage-pro.css">
     <link rel="stylesheet" href="src/home/css/footer.css">
@@ -70,8 +71,8 @@
                     <h1 id="titulo-esquerda">Faça seus <br>comentarios</h1>
                 </div>
                 <div class="inicio-esquerda" id="button-home-esqueda">
-                    <button id="to-coment" class="btn-home"><strong>Comentar</strong></button>
-                    <button id="to-login" class="btn-home"><strong>Fazer Login</strong></button>
+                    <button id="to-coment" class="btn-home"><a href="/"><strong>Comentar</strong></a></button>
+                    <button id="to-login" class="btn-home"><a href=""><strong>Fazer Login</strong></a></button>
                 </div>
             </article>
             <article class="inicio-lateral-direita">
@@ -113,7 +114,7 @@
                 </article>
         </section>
             <div class="button-home">
-                <button class="btn-home" id="btn-confira"><strong>CONFIRA</strong></button>
+                <button class="btn-home" id="btn-confira"><a href=""><strong>CONFIRA</strong></a></button>
             </div>
         </section>
         <!-- progredidno -->
@@ -152,6 +153,7 @@
             <article class="new-artista-esquerda">
                 <div class="text-new-artista">
                     <h1><strong>Artista Revelação</strong></h1>
+                    <br>
                     <p>
                         Ahn Hye-jin, conhecida profissionalmente pelo seu nome <br>
                         artístico Hwasa, é uma cantora, compositora, rapper e <br>
@@ -166,7 +168,7 @@
             </article>
             <article class="new-artista-direita">
                 <h1>Hwasa</h1>
-                <img src="src/component-img/img-cantores/hwasa.jfif" alt="hwasa" id="new-artista-img">
+                <img src="src/home/components/img-cantores/hwasa.jfif" alt="hwasa" id="new-artista-img">
             </article>
         </section>
         <section class="present-arage-pro">
