--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <section class="header-superior">
         <nav class="nav-bar">
             <div class="logo"> 
-                <a href="index.html"><strong>ARAGE</strong></a>
+                <a href=""><strong>ARAGE</strong></a>
             </div>
             <div class="nav-list">
                 <ul>
                     <li class="nav-item"><a href="/" class="nav-link">ALBUNS</a></li>
                     <li class="nav-item"><a href="/" class="nav-link">ARTISTA</a></li>
-                    <li class="nav-item"><a href="/" class="nav-link">MUSICAS</a></li>
+                    <li class="nav-item"><a href="src/MusicPage/MusicPage.html" class="nav-link" target="_blank">MUSICAS</a></li>
                     <li class="nav-item"><a href="/" class="nav-link">COMENTARIOS</a></li>
                 </ul>
             </div>
