--- a/src/AvaliacaoPage/AvaliacaoPage.html
+++ b/src/AvaliacaoPage/AvaliacaoPage.html
@@ -51,6 +51,38 @@
             </div>
         </header>
 
+        <main>
+            <section>
+                <article class="lado_esquerdo">
+                    <div><h1>Hwasa</h1></div>
+                    <div class="foto1">
+                        <img src="" alt="">
+                    </div>
+                </article>
+                <article class="lado_direito"> 
+                    <div><h1>Maria</h1></div>
+                    <div class="foto2">
+                        <img src="" alt="">
+                    </div>
+                </article>
+                <article>
+                    <div class="Compositor">
+                        <h2>Compositor</h2>
+                        <img src="" alt="">
+                        <h2>Hwasa</h2>
+                    </div>
+                    <div class="Genero">
+                        <h2>Genero</h2>
+                        <img src="" alt="">
+                        <h2>Pop</h2>
+                    </div>
+                </article>
+                <article class="Avaliacao">
+                    <div></div>
+                </article>
+            </section>
+        </main>
+
 
         <script src="../components/ComponentesGerais/header/js/header.js"></script>
 </body>
