--- a/src/MusicPage/MusicPage.html
+++ b/src/MusicPage/MusicPage.html
@@ -18,13 +18,13 @@
         <section class="header-superior">
             <nav class="nav-bar">
                 <div class="logo"> 
-                    <a href="index.html"><strong>ARAGE</strong></a>
+                    <a href="../../index.html"><strong>ARAGE</strong></a>
                 </div>
                 <div class="nav-list">
                     <ul>
                         <li class="nav-item"><a href="/" class="nav-link">ALBUNS</a></li>
                         <li class="nav-item"><a href="/" class="nav-link">ARTISTA</a></li>
-                        <li class="nav-item"><a href="/" class="nav-link">MUSICAS</a></li>
+                        <li class="nav-item"><a href="../MusicPage/MusicPage.html" class="nav-link">MUSICAS</a></li>
                         <li class="nav-item"><a href="/" class="nav-link">COMENTARIOS</a></li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
                 <ul>
                     <li class="nav-item"><a href="#">ALBUNS</a></li>
                     <li class="nav-item"><a href="#">ARTISTA</a></li>
-                    <li class="nav-item"><a href="#">MUSICAS</a></li>
+                    <li class="nav-item"><a href="../MusicPage/MusicPage.html">MUSICAS</a></li>
                     <li class="nav-item"><a href="#">COMENTARIOS</a></li>
                 </ul>
                 <div class="login-btn">
@@ -53,6 +53,7 @@
                 </div>
             </div>
         </header>
+        <main>
         <section class="Ranking">
             <article class="Titulo">
                 <h1>Musicas</h1>
@@ -60,12 +61,11 @@
             <article class="backgroud"></article>
             <article class="Placar">
                 <ul>
-                    <div>
-                        <img src="" alt="">
-                    </div>
+                        
                 </ul>
             </article>
         </section>
+    </main> 
         <script src="../components/ComponentesGerais/header/js/header.js" defer></script>
 
     </body>
